Small fixes.
- Remove illegal characters from embedded_css
- Lenient single-origin policy
- More specific css definitions to avoid overlap with IPython notebook

--- a/escher/css/builder-embed.css
+++ b/escher/css/builder-embed.css
@@ -36,17 +36,17 @@
     fill: none;	
     stroke: rgb(50, 50, 50);
 }
-.selected .node-circle{
+g.selected .node-circle{
     stroke-width: 3px;
     stroke: rgb(20, 113, 199);
 }
-.selected .label {
+g.selected .label {
     fill: rgb(20, 113, 199);
 }
 .metabolite-circle {
     stroke: rgb(162, 69, 16);
 }
-.selected .metabolite-circle {
+g.selected .metabolite-circle {
     stroke: rgb(5, 2, 0);
 }
 .segment {
